--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,2 +1,4 @@
 driver=com.mysql.cj.jdbc.Driver
-connectionString=jdbc:mysql://localhost:3306/jdbc?serverTimezone=UTC&user=jdbc&password=jdbc&useSSL=false&allowPublicKeyRetrieval=true
+connectionString=jdbc:mysql://localhost:3306/spotitube?serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
+user=spotitube
+password=spotitube
